Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -29,13 +29,17 @@
       </header>
       <section>
         <h1>
-<a id="" class="anchor" href="#" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a><img src="https://github.com/nhatbui/compakt/blob/master/icon_128.png?raw=true" alt="Compakt">
-</h1>
-
-<h2>
-<a id="twitch-compakt" class="anchor" href="#twitch-compakt" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Twitch Compakt</h2>
+<a id="-twitch-compakt" class="anchor" href="#-twitch-compakt" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a><img src="icon.svg" alt="Compakt"> Twitch Compakt</h1>
 
 <p>Twitch Chat streamlining. Condenses repeated messages/words/emotes.</p>
+
+<h2>
+<a id="developers" class="anchor" href="#developers" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Developers</h2>
+
+<ol>
+<li>Download/clone the repository into a local folder.</li>
+<li><a href="https://developer.chrome.com/extensions/getstarted#unpacked">Load the extension into Chrome.</a></li>
+</ol>
       </section>
       <footer>
         <p>This project is maintained by <a href="https://github.com/nhatbui">nhatbui</a></p>
