Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -34,7 +34,28 @@
 <p>Twitch Chat streamlining. Condenses repeated messages/words/emotes.</p>
 
 <h2>
+<a id="features" class="anchor" href="#features" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Features</h2>
+
+<ul>
+<li>Compresses repeated text e.g. "kappa kappa kappa" = "kappa x3"</li>
+<li>Compresses repeated emotes similar to how text is compressed.</li>
+<li>Repeated messages are grouped together.</li>
+<li>See a list of all the users who uttered the same message.</li>
+</ul>
+
+<h2>
+<a id="how-to-use-it" class="anchor" href="#how-to-use-it" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>How to use it</h2>
+
+<ul>
+<li>Just install and visit a Twitch stream to see it in action.</li>
+<li>(Options menu coming soon!)</li>
+</ul>
+
+<h2>
 <a id="developers" class="anchor" href="#developers" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Developers</h2>
+
+<p>This repository itself is an unpacked extension (with some extra unnecessary files like this readme...).
+So all that needs to be done to develop with Compakt is:</p>
 
 <ol>
 <li>Download/clone the repository into a local folder.</li>
