--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
 
 <p>Twitch Chat streamlining. Condenses repeated messages/words/emotes.</p>
 
+<iframe width="420" height="315" src="https://www.youtube.com/embed/twy-K8oruDc" frameborder="0" allowfullscreen></iframe>
+
 <h2>
 <a id="features" class="anchor" href="#features" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Features</h2>
 
