Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
 
 <p>Twitch Chat streamlining. Condenses repeated messages/words/emotes.</p>
 
-<iframe width="420" height="315" src="https://www.youtube.com/embed/twy-K8oruDc" frameborder="0" allowfullscreen></iframe>
+<p>Let Twitch chat be Twitch chat. Don't miss any more buried messages. Reduce clutter on the screen.</p>
+
+<p><a href="https://www.youtube.com/watch?v=twy-K8oruDc">Compakt in action! (youtube)</a></p>
 
 <h2>
 <a id="features" class="anchor" href="#features" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Features</h2>
@@ -63,6 +65,11 @@ So all that needs to be done to develop with Compakt is:</p>
 <li>Download/clone the repository into a local folder.</li>
 <li><a href="https://developer.chrome.com/extensions/getstarted#unpacked">Load the extension into Chrome.</a></li>
 </ol>
+
+<h3>
+<a id="publishing" class="anchor" href="#publishing" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Publishing</h3>
+
+<p>The "official" Chrome Extension is published <a href="https://chrome.google.com/webstore/detail/twitch-compakt/gfjfndigkjbiabgckjpngijjdkmebeje?hl=en-US">here</a>. Official pushes of this repo to the Chrome Web Store are done as needed.</p>
       </section>
       <footer>
         <p>This project is maintained by <a href="https://github.com/nhatbui">nhatbui</a></p>
