Embed video link

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
 <p>Let Twitch chat be Twitch chat. Don't miss any more buried messages. Reduce clutter on the screen.</p>
 
-<p><a href="https://www.youtube.com/watch?v=twy-K8oruDc">Compakt in action! (youtube)</a></p>
+<iframe width="420" height="315" src="https://www.youtube.com/embed/twy-K8oruDc" frameborder="0" allowfullscreen></iframe>
 
 <h2>
 <a id="features" class="anchor" href="#features" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Features</h2>
