Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -31,20 +31,20 @@
         <h1>
 <a id="-twitch-compakt" class="anchor" href="#-twitch-compakt" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a><img src="icon.svg" alt="Compakt"> Twitch Compakt</h1>
 
-<p>Twitch Chat streamlining. Condenses repeated messages/words/emotes.</p>
+<p>Twitch Chat streamlining. Condenses repeated words, emotes, and messages.</p>
 
 <p>Let Twitch chat be Twitch chat. Don't miss any more buried messages. Reduce clutter on the screen.</p>
 
-<iframe width="420" height="315" src="https://www.youtube.com/embed/twy-K8oruDc" frameborder="0" allowfullscreen></iframe>
+
 
 <h2>
 <a id="features" class="anchor" href="#features" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Features</h2>
 
 <ul>
-<li>Compresses repeated text e.g. "kappa kappa kappa" = "kappa x3"</li>
-<li>Compresses repeated emotes similar to how text is compressed.</li>
+<li>Compresses repeated words e.g. "kappa kappa kappa" = "kappa x3"</li>
+<li>Compresses repeated emotes similar to how words are compressed.</li>
 <li>Repeated messages are grouped together.</li>
-<li>See a list of all the users who uttered the same message.</li>
+<li>Hover to see a list of all the users who uttered the same message.</li>
 </ul>
 
 <h2>
@@ -58,6 +58,11 @@
 <h2>
 <a id="developers" class="anchor" href="#developers" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Developers</h2>
 
+<p>Pull requests always welcome!</p>
+
+<h3>
+<a id="developing" class="anchor" href="#developing" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Developing</h3>
+
 <p>This repository itself is an unpacked extension (with some extra unnecessary files like this readme...).
 So all that needs to be done to develop with Compakt is:</p>
 
@@ -70,6 +75,11 @@ So all that needs to be done to develop with Compakt is:</p>
 <a id="publishing" class="anchor" href="#publishing" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Publishing</h3>
 
 <p>The "official" Chrome Extension is published <a href="https://chrome.google.com/webstore/detail/twitch-compakt/gfjfndigkjbiabgckjpngijjdkmebeje?hl=en-US">here</a>. Official pushes of this repo to the Chrome Web Store are done as needed.</p>
+
+<h3>
+<a id="trello" class="anchor" href="#trello" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Trello</h3>
+
+<p>Some development discussion/planning/designing are done on <a href="https://trello.com/compakt">Trello</a>. Feel free to message us to get added! Trello is not required for contributions: you can still just submit pull requests :)</p>
       </section>
       <footer>
         <p>This project is maintained by <a href="https://github.com/nhatbui">nhatbui</a></p>
