--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
 
         <p class="view"><a href="https://github.com/nhatbui/compakt">View the Project on GitHub <small>nhatbui/compakt</small></a></p>
 
-
         <ul>
-          <li><a href="https://github.com/nhatbui/compakt/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/nhatbui/compakt/tarball/master">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="https://github.com/nhatbui/compakt">View On <strong>GitHub</strong></a></li>
+          <li><a href="https://chrome.google.com/webstore/detail/twitch-compakt/gfjfndigkjbiabgckjpngijjdkmebeje?hl=en-US">Download <strong>Chrome Extension</strong></a></li>
+          <li><a href="https://github.com/nhatbui/compakt/zipball/master">Developers: Download <strong>ZIP File</strong></a></li>
+          <li><a href="https://github.com/nhatbui/compakt/tarball/master">Developers: Download <strong>TAR Ball</strong></a></li>
+          <li><a href="https://github.com/nhatbui/compakt">Developers: View On <strong>GitHub</strong></a></li>
         </ul>
       </header>
       <section>
@@ -35,7 +35,7 @@
 
 <p>Let Twitch chat be Twitch chat. Don't miss any more buried messages. Reduce clutter on the screen.</p>
 
-
+<iframe width="420" height="315" src="https://www.youtube.com/embed/twy-K8oruDc" frameborder="0" allowfullscreen></iframe>
 
 <h2>
 <a id="features" class="anchor" href="#features" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Features</h2>
