--- a/index.html
+++ b/index.html
@@ -22,9 +22,8 @@
 
         <ul>
           <li><a href="https://chrome.google.com/webstore/detail/twitch-compakt/gfjfndigkjbiabgckjpngijjdkmebeje?hl=en-US">Download <strong>Chrome Extension</strong></a></li>
-          <li><a href="https://github.com/nhatbui/compakt/zipball/master">Developers: Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/nhatbui/compakt/tarball/master">Developers: Download <strong>TAR Ball</strong></a></li>
-          <li><a href="https://github.com/nhatbui/compakt">Developers: View On <strong>GitHub</strong></a></li>
+          <li><a href="https://github.com/nhatbui/compakt/zipball/master">Devs: Download <strong>ZIP File</strong></a></li>
+          <li><a href="https://github.com/nhatbui/compakt/tarball/master">Devs: Download <strong>TAR Ball</strong></a></li>
         </ul>
       </header>
       <section>
