make things fit in button

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <p class="view"><a href="https://github.com/nhatbui/compakt">View the Project on GitHub <small>nhatbui/compakt</small></a></p>
 
         <ul>
-          <li><a href="https://chrome.google.com/webstore/detail/twitch-compakt/gfjfndigkjbiabgckjpngijjdkmebeje?hl=en-US">Download <strong>Chrome Extension</strong></a></li>
+          <li><a href="https://chrome.google.com/webstore/detail/twitch-compakt/gfjfndigkjbiabgckjpngijjdkmebeje?hl=en-US">Download <strong>Extension</strong></a></li>
           <li><a href="https://github.com/nhatbui/compakt/zipball/master">Devs: Download <strong>ZIP File</strong></a></li>
           <li><a href="https://github.com/nhatbui/compakt/tarball/master">Devs: Download <strong>TAR Ball</strong></a></li>
         </ul>
