Add inline install button.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <title>Compakt by nhatbui</title>
 
+    <link rel="chrome-webstore-item" href="https://chrome.google.com/webstore/detail/itemID">
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/github-light.css">
     <meta name="viewport" content="width=device-width">
@@ -18,13 +19,9 @@
         <h1>Compakt</h1>
         <p>Twitch Chat streamlining. Condenses repeated messages/words/emotes.</p>
 
-        <p class="view"><a href="https://github.com/nhatbui/compakt">View the Project on GitHub <small>nhatbui/compakt</small></a></p>
+        <button onclick="chrome.webstore.install()" id="install-button">Add to Chrome</button>
 
-        <ul>
-          <li><a href="https://chrome.google.com/webstore/detail/twitch-compakt/gfjfndigkjbiabgckjpngijjdkmebeje?hl=en-US">Download <strong>Extension</strong></a></li>
-          <li><a href="https://github.com/nhatbui/compakt/zipball/master">Devs: Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/nhatbui/compakt/tarball/master">Devs: Download <strong>TAR Ball</strong></a></li>
-        </ul>
+        <p class="view"><a href="https://github.com/nhatbui/compakt">View the Project on GitHub <small>nhatbui/compakt</small></a></p>
       </header>
       <section>
         <h1>
